RESOLVED FIXED 153548
Modern IDB: SQLite backend doesn't update index records as object records are added
https://bugs.webkit.org/show_bug.cgi?id=153548
Summary Modern IDB: SQLite backend doesn't update index records as object records are...
Brady Eidson
Reported 2016-01-27 09:34:36 PST
Modern IDB: SQLite backend doesn't update index records as object records are added
Attachments
Patch v1 (19.80 KB, patch)
2016-01-27 12:25 PST, Brady Eidson
achristensen: review+
achristensen: commit-queue-
Patch for landing (19.83 KB, patch)
2016-01-27 13:10 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2016-01-27 12:25:31 PST
Created attachment 270022 [details] Patch v1
WebKit Commit Bot
Comment 2 2016-01-27 12:27:48 PST
Attachment 270022 [details] did not pass style-queue: ERROR: Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.h:96: The parameter name "key" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 3 2016-01-27 12:47:11 PST
Comment on attachment 270022 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=270022&action=review r=me > Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:840 > + IDBError error = uncheckedPutIndexRecord(info.objectStoreIdentifier(), info.identifier(), key, indexKey.asOneKey()); auto? > Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:851 > + bool hasRecord; > + IDBError error; The scope of these is strange. > Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:862 > + IDBError error = uncheckedPutIndexRecord(info.objectStoreIdentifier(), info.identifier(), key, indexKey); auto? > Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:1077 > + auto indexes = info.indexMap(); I don't think this needs its own variable name if we are only going to iterate its values.
Brady Eidson
Comment 4 2016-01-27 13:10:46 PST
Created attachment 270032 [details] Patch for landing I think the scoping on those makes sense. Fixed everything else.
WebKit Commit Bot
Comment 5 2016-01-27 13:57:31 PST
Comment on attachment 270032 [details] Patch for landing Clearing flags on attachment: 270032 Committed r195689: <http://trac.webkit.org/changeset/195689>
WebKit Commit Bot
Comment 6 2016-01-27 13:57:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.